all methods for working with files on S3
